fix image alignment issue
we had a styling / alignment issue with the grid of options we show
in the resource picker. this just does a little css fiddling to fix
that - turns out that these things don't size correctly unless you set a
`min-width` on them!

closes #681
pr #754

--- a/static/scss/resource-picker-dialog.scss
+++ b/static/scss/resource-picker-dialog.scss
@@ -1,6 +1,7 @@
 .resource-picker-listing {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
+  grid-auto-rows: minmax(120px, auto);
   column-gap: 10px;
   row-gap: 10px; // sass-lint:disable-line no-misspelled-properties
 
@@ -13,7 +14,6 @@
       background-color: initial;
       border-radius: 0;
       padding: 10px 0;
-      margin: 0;
 
       &:not(:last-child) {
         border-bottom: 1px solid $studio-gray;
@@ -29,7 +29,7 @@
     cursor: pointer;
     background-color: $dialog-gray;
     border-radius: 5px;
-    margin: 2px;
+    min-width: 0;
 
     &.focused {
       border: 2px solid black;
@@ -47,6 +47,7 @@
 
     img {
       height: 100px;
+      max-width: 100%;
       object-fit: cover;
       border-radius: 3px 3px 0 0;
     }
